unpackaged/main/default/objects/litify_pm__COI_Conflict_Status__c/litify_pm__COI_Conflict_Status__c.object-meta.xml
<CustomObject>
    <label>COI Conflict Status</label>
    <nameField>
        <label>COI Conflict Status</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>COI Conflict Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>