unpackaged/main/default/objects/litify_pm__COI_Conflict_Status__c/fields/litify_pm__COI_Setting__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__COI_Setting__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>COI Setting</label>
    <referenceTo>litify_pm__COI_Setting__c</referenceTo>
    <relationshipLabel>COI Conflict Statuses</relationshipLabel>
    <relationshipName>COI_Conflict_Statuses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>