unpackaged/main/default/objects/litify_pm__COI_Conflict_Status__c/fields/litify_pm__Color__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>#ffffff</fullName>
                <default>true</default>
                <label>White</label>
            </value>
            <value>
                <fullName>#fe9339</fullName>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>#2e844a</fullName>
                <label>Green</label>
            </value>
            <value>
                <fullName>#ba0517</fullName>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>