unpackaged/main/default/objects/litify_pm__COI_Conflict_Status__c/fields/litify_pm__Is_Conflict__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Is_Conflict__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Conflict</label>
    <type>Checkbox</type>
</CustomField>